# cs6058

./: .gitignore
hw/: Submission.odt
hw/1/problem/1/: CMakeLists.txt  main.cpp
hw/1/problem/2/: CMakeLists.txt  main.cpp
hw/1/problem/3/: CMakeLists.txt  main.cpp
hw/1/problem/4/: CMakeLists.txt  main.cpp
hw/1/problem/5/: CMakeLists.txt  main.cpp
hw/1/problem/6/: CMakeLists.txt  main.cpp
hw/2/: Submission.odt
hw/3/: Submission.odt
hw/4/: Submission.odt
projects/1/otp_m06658145/: CMakeLists.txt  Readme.txt  Submission.odt
projects/1/otp_m06658145/data/: key.txt
projects/1/otp_m06658145/src/: keygen.cpp  keygen.h  main.cpp  test_frequency.cpp  test_keygen.cpp  test_running_time.cpp
projects/2/aes_m06658145/: CMakeLists.txt  Readme.txt  Submission.odt
projects/2/aes_m06658145/src/: aes.h  keygen.cpp  main.cpp  test_frequency.cpp
projects/3/se_m06658145/: CMakeLists.txt  Readme.txt  Report.odt  Submission.odt
projects/3/se_m06658145/src/: add_token_to_file.h  aes.h  encrypt_directory.h  index.h  keygen.cpp  keygen_to_file.h  main.cpp  prf.h  read_file.h  read_key_from_file.h  search_token.h  test_running_time.cpp
projects/4/pow_m06658145/: CMakeLists.txt  Readme.txt  Report.odt  Submission.odt
projects/4/pow_m06658145/data/: input.txt  solution.txt  target.txt  test_results.txt
projects/4/pow_m06658145/src/: aes.h  generate_random.h  generate_solution.h  keygen.h  main.cpp  sha256.h  target_generation.h  test_running_time.cpp  verify_solution.h  write_file.h
